# com2009_exercises

./: README.md
_archive_part1_pubsub/: CMakeLists.txt
_archive_part1_pubsub/src/: float64_publisher.py  publisher.py  subscriber.py
com2009_exercises/: CMakeLists.txt  package.xml
part1_pubsub/: CMakeLists.txt  package.xml  setup.cfg  setup.py
part1_pubsub/launch/: pubsub.launch  pubsub_launch.py
part1_pubsub/msg/: Example.msg
part1_pubsub/part1_pubsub/: publisher.py  subscriber.py
part1_pubsub/scripts/: custom_msg_publisher.py  publisher.py  subscriber.py
part1_pubsub/src/: float64_subscriber.py  publisher.py  subscriber.py
part2_navigation/: CMakeLists.txt  package.xml
part2_navigation/launch/: ex4_advanced.launch  ex5_advanced.launch
part2_navigation/part2_navigation/: odometry.py
part2_navigation/scripts/: move_circle.py  move_square.py  move_square_advanced.py  odom_subscriber.py
part2_navigation/src/: minimal_cpp_node.cpp  move_circle.py  move_square.py  odom_subscriber.py
part2_navigation_ros1/: .CMakeLists.txt
part2_navigation_ros1/src/: circle.py
part4_services/: CMakeLists.txt  package.xml
part4_services/src/: approach_server.py  move_client.py  move_server.py  timed_move_server.py
part5_actions/: CMakeLists.txt  package.xml
part5_actions/src/: action_client.py  concurrent_action_client.py  preemptive_action_client.py  search_client.py  search_client_adv.py  search_server.py  tb3.py
part6_vision/: CMakeLists.txt  package.xml
part6_vision/src/: colour_search.py  line_follower.py  object_detection.py
