<?xml version="1.0"?>
<package format="2">
  <name>part2_navigation</name>
  <version>0.0.0</version>
  <description>The part2_navigation package</description>

  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>
  <license>GNU GPL 3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
